# mechanical

./: README.md  docker-compose.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: config.py  database.py  errors.py  main.py
backend/src/models/: foremen.py  technician_tasks.py  technicians.py
backend/src/routes/: __init__.py  auth.py  foremen.py  notifications.py  technician_tasks.py  technicians.py
backend/src/schemas/: auth.py  foreman.py  notification.py  technician.py  technician_task.py
backend/src/services/: auth.py  notifications.py  passwords.py  phone.py
backend/tests/: test_auth_notifications.py
frontend/: Dockerfile  README.md  bun.lockb  components.json  eslint.config.js  index.html  package.json  vite.config.ts
frontend/src/: app.tsx  main.tsx
frontend/src/features/: foremen-table.tsx  notifications-list.tsx  tasks-table.tsx  technicians-table.tsx
frontend/src/pages/: foremen-page.tsx  technicians-page.tsx  user-selection-page.tsx
frontend/src/shared/: auth.ts  errors.ts  phone.ts
frontend/src/shared/api/: api-instance.ts
frontend/src/shared/ui/default/: command.tsx  form.tsx  toaster.tsx
frontend/src/utils/: formatDateToInput.tsx
nginx/: default.conf
